--- a/Notes/02_异常.md
+++ b/Notes/02_异常.md
@@ -44,11 +44,20 @@ public static int div(int m, int n) {
             r = m/n;
         } catch (ArithmeticException e) {
             System.out.println(e);
+        } finally {
+            System.out.println("finally");
         }
         
         return r;
     }
-```
+```  
+> 输出结果中会提示：java.lang.ArithmeticException: / by zero  
+> 程序不会异常退出，执行完再退出
+> finally中的内容最终一定会被执行
+
+
+
+
 
 
 
