--- a/Notes/02_异常.md
+++ b/Notes/02_异常.md
@@ -34,9 +34,9 @@ public class excep {
 }
 ```
 > 执行时若输入：java excep 6 0  
-> 结果是程序异常退出，这属于运行时异   
+> 结果是程序异常退出，这属于运行时异常   
 
-### try-catch
+### try-catch-finally
 ```java
 public static int div(int m, int n) {
         int r = 0;
@@ -51,11 +51,76 @@ public static int div(int m, int n) {
         return r;
     }
 ```  
-> 输出结果中会提示：java.lang.ArithmeticException: / by zero  
-> 程序不会异常退出，执行完再退出
+> 输出结果中会提示：java.lang.ArithmeticException: / by zero。表示算术异常  
+> 程序不会异常退出，执行完再退出  
 > finally中的内容最终一定会被执行
 
+### throws
+将异常抛给调用者处理
+```java
+public class excep {
+    public static void main(String args[]) {
+        int m = Integer.parseInt(args[0]);
+        int n = Integer.parseInt(args[1]);
+        int ret = 0;
 
+        try {
+            ret = div(m, n);
+        } catch(ArithmeticException e) {
+            System.out.println(e);
+        }
+        System.out.println("m + n = " + ret);
+    }
+
+    public static int div(int m, int n) throws ArithmeticException {
+        int r = 0;
+        r = m/n;
+        
+        return r;
+    }
+}
+``` 
+
+try-catch-finally和throws可以同时在一个方法上使用，此时如果被调用者已经处理了异常，则调用者就不会再处理异常。 
+
+### throw
+手动抛出异常 
+```java
+public static int div(int m, int n) throws ArithmeticException {
+        int r = 0;
+
+        try {
+            r = m/n;
+        } catch (ArithmeticException e) {
+            System.out.println(e);
+            throw e;
+        }
+        
+        return r;
+    }
+```
+
+### RuntimeException
+异常的种类有很多，不可能一个个显示写出来捕获，可直接捕获一个范围较大的异常类，RuntimeException运行时异常  
+```java
+try {
+            m = Integer.parseInt(args[0]);
+            n = Integer.parseInt(args[1]);
+            ret = div(m, n);
+        } catch(ArithmeticException e) {
+            System.out.println(e);
+        } catch (RuntimeException e) {
+            System.out.println(e);
+        }
+}
+```
+> 大范围的异常类不能放置在其子类异常前面，因为存在覆盖问题，编译无法通过
+
+> try或catch块中有return或throw语句时，会先执行finally块，在返回来执行try或catch块中的return或throw语句 
+
+> 对于不可查异常，写不写throws语句系统都会抛出，RuntimeException属于不可查异常  
+
+> 对于可查异常，必须处理，要么try-catch-finally自己处理，要么通过throws抛给调用者处理
 
 
 
