--- a/Notes/03_包和权限.md
+++ b/Notes/03_包和权限.md
@@ -36,16 +36,18 @@ public class mpack {
 再次编译程序即可 
 
 > 设置环境变量CLASSPATH的格式
-> - export CLASSPATH=<DIR1>:<DIR2>:...:<file1.jar>:<file2.jar>:...
+> - export CLASSPATH=【DIR1】:【DIR2】:...:【file1.jar】:【file2.jar】:...
 
 
 ## **权限**
 public class可以被外包（其它目录）访问  
-class只能被本包（目录）访问  
+class只能被本包（目录）访问 
+
+> 属性权限
 
 |          | 同一个类 | 同一个包 | 不同包的子类 | 不同包的非子类 |   
-| ---      | ---     | ---     | ---         | ---           |   
-| private  | 可以     |         |             |               | 
-| default  | 可以     | 可以    |             |               |   
-| protected| 可以     | 可以    | 可以         |               | 
+| :---:    |  :---:  |  :---:  | :---:     | :---:     |  
+| private   | 可以     |         |             |         | 
+| default    | 可以     | 可以    |             |         |  
+| protected  | 可以     | 可以    | 可以         |           | 
 | public   | 可以|可以|可以|可以|
