--- a/Notes/03_包和权限.md
+++ b/Notes/03_包和权限.md
@@ -31,7 +31,7 @@ public class mpack {
 ## **使用包**
 设置环境变量CLASSPATH
 - `export CLASSPATH=.:majar.jar`   
-- 指定去当前目录下找类，获取去majar.jar文件中找    
+- 指定去当前目录下找类，或者去majar.jar文件中找    
 
 再次编译程序即可 
 
