--- a/Notes/01_类特性.md
+++ b/Notes/01_类特性.md
@@ -1,4 +1,39 @@
 # **封装性**
+```java
+class Person {
+    String name;
+    int age;
+    static int count;
+    String getName() {
+        return name;
+    }
+    int getAge() {
+        return age;
+    }
+
+    static {
+        System.out.println("static block");
+    } /* 静态构造块，实例化第一个对象之前，执行一次 */
+
+    {
+        System.out.println("Construct block");
+        count++;
+    } /* 构造块，每实例化一个对象前，都执行 */
+
+    public Person(int age) {
+        this.age = age;
+    }
+    public Person(String name) {
+        System.out.println("Construct method");
+        this.name = name;
+    }
+
+    static void print() {
+        System.out.println("this is person class");
+    }
+}
+```
+
 private属性成员不能被类对象访问，只能通过类方法调用
 - - -   
 
