--- a/Notes/01_类特性.md
+++ b/Notes/01_类特性.md
@@ -13,12 +13,12 @@ class Person {
 
     static {
         System.out.println("static block");
-    } /* 静态构造块，实例化第一个对象之前，执行一次 */
+    } /* 静态构造块，实例化第一个对象時，执行一次 */
 
     {
         System.out.println("Construct block");
         count++;
-    } /* 构造块，每实例化一个对象前，都执行 */
+    } /* 构造块，每实例化一个对象時，都执行 */
 
     public Person(int age) {
         this.age = age;
@@ -252,5 +252,34 @@ public class polym {
 }
 ```
 
+## 私有构造函数 
+- 只含有一个构造函数且该构造函数属性为私有的类不能进行实例化  
+- 含有多个构造函数，只要有一个构造函数属性不是私有的就可以通过这个构造函数进行实例化对象  
+
+### 单例模式
+使用私有构造函数的方式可以实现单例模式  
+> 很多时候，我们只需要一个对象就可以了，不希望用户来构造对象，比如线程池，驱动，显示器等。如果把构造函数私有，很多程序都可以得到其实例，将会带来混乱。  
+
+```java
+public class Singleton {
+
+    private static Singleton instance;
+
+    private Singleton() {
+        /* ... */
+    }
+
+    public Singleton getInstance() {
+
+        if (instance == null)
+            instance = new Singleton();
+        return instance;
+    }
+
+}
+```
+
+获取实例方法
+`Singleton instance = Singleton.getInstance();`
 
 
