--- a/Notes/01_类特性.md
+++ b/Notes/01_类特性.md
@@ -75,7 +75,10 @@ class student extends Person {
 }
 // 最终实例化student类对象时会调用有参数的父类构造方法
 ```
-使用super函数传入参数，该函数必须放在构造方法中的开头
+使用super函数传入参数，该函数必须放在构造方法中的开头   
+对于只含有带参数形式构造函数的父类，子类在构造函数中必须使用super函数传入参数，否则编译无法通过    
+对于没有构造函数的父类，子类无需使用super函数也可，因为编译器会默认给父类一个无参数的构造函数   
+
 
 
 ## **final**
