--- a/Notes/03_包和权限.md
+++ b/Notes/03_包和权限.md
@@ -51,3 +51,13 @@ class只能被本包（目录）访问
 | default  | 可以     | 可以    |              |                |  
 | protected| 可以     | 可以    | 可以         |                | 
 | public   | 可以     | 可以    | 可以         | 可以           |
+
+
+### protected关键字
+- 对于类用户而言，他是private   
+- 对于任何继承于此类的子类而言或者其他任何位于同一个包的类而言，他却是可供访问的   
+
+
+
+
+
